--- a/z_AktuellerStand/src/assets/css/App.css
+++ b/z_AktuellerStand/src/assets/css/App.css
@@ -58,15 +58,17 @@
 
 /* Typo */
 .h1 {
-  font-size: calc(35px + 1vmin);
+  font-size: calc(45px + 1vmin);
   font-weight: 700;
   cursor: default;
+  color: #ffffff;
 }
 
 .h2 {
   font-size: calc(14px + 1vmin);
   font-weight: 700;
   cursor: default;
+  color: #ffffff;
 }
 
 .h3 {
@@ -84,6 +86,17 @@
   font-weight: 300;
   margin: 0px 100px 100px 100px;
   max-width: 1000px;
+  color: #ffffff;
+}
+
+.tile {
+  background: linear-gradient(
+    to bottom,
+    rgba(187, 232, 229, 0.2),
+    rgba(187, 232, 229, 0)
+  );
+  border-radius: 20px;
+  margin: 100px;
 }
 
 /* Buttons */
